Switching from replit to webstorm

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   
   <!-- ayah page start -->
-  <div class="ayahpage">
+  <div class="ayah-page">
     <div class="wrapper">
       <h1 class="header">Ayah of the Day</h1>
       <div id="ayah-display" class="content">
