--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
+
   
-  <!-- ayah page start -->
+  <!-- Ayah page start -->
   <div class="ayah-page">
     <div class="wrapper">
       <div class = "title">Instant Ayah</div>
